--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -9,6 +9,10 @@ permissions:
   pages: write
   id-token: write
 
+concurrency:
+  group: pages
+  cancel-in-progress: true
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -17,14 +21,22 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: npm
+          cache-dependency-path: runtime/the-runtime/package-lock.json
       - run: npm ci
+        working-directory: runtime/the-runtime
       - run: npm run build
+        working-directory: runtime/the-runtime
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: dist
+          path: runtime/the-runtime/dist
 
   deploy:
     needs: build
     runs-on: ubuntu-latest
+    environment:
+      name: github-pages
+      url: ${{ steps.deployment.outputs.page_url }}
     steps:
       - uses: actions/deploy-pages@v4
+        id: deployment
