--- a/.github/workflows/depoly.yml
+++ b/.github/workflows/depoly.yml
@@ -22,14 +22,12 @@ jobs:
         with:
           node-version: 20
           cache: npm
-          cache-dependency-path: runtime/the-runtime/package-lock.json
+          cache-dependency-path: package-lock.json
       - run: npm ci
-        working-directory: runtime/the-runtime
       - run: npm run build
-        working-directory: runtime/the-runtime
       - uses: actions/upload-pages-artifact@v3
         with:
-          path: runtime/the-runtime/dist
+          path: dist
 
   deploy:
     needs: build
